# AI_AGENTS

./: README.md
AI_Agent_SVIJ/: README.md  pyproject.toml  report.md
AI_Agent_SVIJ/src/ai_agents/: crew.py  main.py
AI_Agent_SVIJ/src/ai_agents/tools/: custom_tool.py
