[project]
name = "ai_agents"
version = "0.1.0"
description = "ai-agents using crewAI"
authors = [{ name = "SHREYAS VIJ", email = "shrvij28@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ai_agents = "ai_agents.main:run"
run_crew = "ai_agents.main:run"
train = "ai_agents.main:train"
replay = "ai_agents.main:replay"
test = "ai_agents.main:test"

[build-system]
requires = ["hatchling>=1.12.2"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
